--- a/index.html
+++ b/index.html
@@ -13,56 +13,59 @@
     <link rel="stylesheet" href="./css/main.css">
 
 </head>
+
 <body>
     <h1>Siemanko</h1>
-<nav>
-    <ul class="menu">
-        <li class="menu-item">
-            Pozycja 1
-            <ul class="dropdown">
-                <li>Link nr 1</li>
-                <li>Link nr 2</li>
-                <li>Link nr 3</li>
-                <li>Link nr 4</li>
-                <li>Link nr 5</li>
-                <li>Link nr 6</li>
-            </ul>
-        </li>
-        <li class="menu-item two">
-            Pozycja 2
-            <ul class="dropdown">
-                <li>Link nr 1</li>
-                <li>Link nr 2</li>
-                <li>Link nr 3</li>
-                <li>Link nr 4</li>
-                <li>Link nr 5</li>
-                <li>Link nr 6</li>
-            </ul>
-        </li>
-        <li class="menu-item three">
-            Pozycja 3
-            <ul class="dropdown">
-                <li>Link nr 1</li>
-                <li>Link nr 2</li>
-                <li>Link nr 3</li>
-                <li>Link nr 4</li>
-                <li>Link nr 5</li>
-                <li>Link nr 6</li>
-            </ul>
-        </li>
-        <li class="menu-item four">
-            Pozycja 4
-            <ul class="dropdown">
-                <li>Link nr 1</li>
-                <li>Link nr 2</li>
-                <li>Link nr 3</li>
-                <li>Link nr 4</li>
-                <li>Link nr 5</li>
-                <li>Link nr 6</li>
-            </ul>
-        </li>
-    </ul>
-</nav>
+    <p>nowy pomysł</p>
+    <h3>Sranie</h3>
+    <nav>
+        <ul class="menu">
+            <li class="menu-item">
+                Pozycja 1
+                <ul class="dropdown">
+                    <li>Link nr 1</li>
+                    <li>Link nr 2</li>
+                    <li>Link nr 3</li>
+                    <li>Link nr 4</li>
+                    <li>Link nr 5</li>
+                    <li>Link nr 6</li>
+                </ul>
+            </li>
+            <li class="menu-item two">
+                Pozycja 2
+                <ul class="dropdown">
+                    <li>Link nr 1</li>
+                    <li>Link nr 2</li>
+                    <li>Link nr 3</li>
+                    <li>Link nr 4</li>
+                    <li>Link nr 5</li>
+                    <li>Link nr 6</li>
+                </ul>
+            </li>
+            <li class="menu-item three">
+                Pozycja 3
+                <ul class="dropdown">
+                    <li>Link nr 1</li>
+                    <li>Link nr 2</li>
+                    <li>Link nr 3</li>
+                    <li>Link nr 4</li>
+                    <li>Link nr 5</li>
+                    <li>Link nr 6</li>
+                </ul>
+            </li>
+            <li class="menu-item four">
+                Pozycja 4
+                <ul class="dropdown">
+                    <li>Link nr 1</li>
+                    <li>Link nr 2</li>
+                    <li>Link nr 3</li>
+                    <li>Link nr 4</li>
+                    <li>Link nr 5</li>
+                    <li>Link nr 6</li>
+                </ul>
+            </li>
+        </ul>
+    </nav>
 
 </body>
 
